--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/dist/e.min.js": "/dist/e.min.js",
     "/dist/e.min.js.map": "/dist/e.min.js.map",
-    "/dist/test.js": "/dist/test.js",
-    "/dist/test.js.map": "/dist/test.js.map"
+    "/examples/test.min.js": "/examples/test.min.js",
+    "/examples/test.min.js.map": "/examples/test.min.js.map"
 }
