--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unseenco/e",
-  "version": "1.0.2",
-  "description": "Simple but efficient js events",
+  "version": "1.1.0",
+  "description": "Simple but efficient js events - event bus, delegation, simple DOM event API, and custom events.",
   "contributors": [
     {
       "name": "Jake Whiteley",
