--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unseenco/e",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "Simple but efficient js events - event bus for your app, delegate events, simple DOM event API. ",
   "contributors": [
     {
@@ -14,10 +14,9 @@
     "access": "public"
   },
   "repository": "https://github.com/craftedbygc/e",
-  "main": "src/e.js",
+  "main": "dist/e.min.js",
   "dependencies": {
-    "selector-set": "^1.1.4",
-    "weakset": "^1.0.0"
+    "selector-set": "^1.1.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
