--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@unseenco/e",
-  "version": "1.6.2",
-  "description": "The complete js events solution - An event bus inspired by tiny-emitter, simple DOM event API, and incredibly efficient delegated events in one lightweight package.",
-  "keywords": ["eventbus", "bus", "events", "delegation", "delegated events", "DOM events", "binding", "events management", "event manager", "event bus", "tiny", "lightweight", "efficient"],
+  "version": "1.6.4",
+  "description": "The complete (but tiny) js events solution - An event bus/emitter, simple DOM event API, and incredibly efficient delegated events.",
+  "keywords": ["eventbus", "bus", "events", "delegation", "delegated events", "DOM events", "binding", "events management", "event manager", "event bus", "tiny", "lightweight", "efficient", "emitter"],
   "contributors": [
     {
       "name": "Jake Whiteley",
